[gd_scene load_steps=4 format=3 uid="uid://cryghm0n4gpw2"]

[ext_resource type="Script" path="res://scripts/ui/menu_options.gd" id="1_7eoik"]
[ext_resource type="StyleBox" uid="uid://chvlw8pqinkx3" path="res://resources/styles/menu_panel.tres" id="2_p5gdr"]
[ext_resource type="Theme" uid="uid://bycwepbj8cxa4" path="res://resources/styles/theme.tres" id="3_mj745"]

[node name="OptionsMenu" type="Control" node_paths=PackedStringArray("master_vol_slider", "music_vol_slider", "sfx_vol_slider", "language_option")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7eoik")
master_vol_slider = NodePath("Panel/MarginContainer/Vertical/Middle/MasterVolume/Master")
music_vol_slider = NodePath("Panel/MarginContainer/Vertical/Middle/Music/Music")
sfx_vol_slider = NodePath("Panel/MarginContainer/Vertical/Middle/SoundEffects/SFX")
language_option = NodePath("Panel/MarginContainer/Vertical/Middle/Language/LanguageOptions")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 123.0
offset_top = 107.0
offset_right = -123.0
offset_bottom = -107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_p5gdr")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35
metadata/_edit_use_anchors_ = true

[node name="Vertical" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="Top" type="VBoxContainer" parent="Panel/MarginContainer/Vertical"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/MarginContainer/Vertical/Top"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "OPTIONS"
horizontal_alignment = 1

[node name="Middle" type="VBoxContainer" parent="Panel/MarginContainer/Vertical"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 35

[node name="Language" type="HBoxContainer" parent="Panel/MarginContainer/Vertical/Middle"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/Vertical/Middle/Language"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_mj745")
theme_override_font_sizes/font_size = 25
text = "LANGUAGE"

[node name="LanguageOptions" type="OptionButton" parent="Panel/MarginContainer/Vertical/Middle/Language"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
flat = true
selected = 0
item_count = 2
popup/item_0/text = "English"
popup/item_1/text = "Russian"
popup/item_1/id = 1

[node name="MasterVolume" type="HBoxContainer" parent="Panel/MarginContainer/Vertical/Middle"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/Vertical/Middle/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "VOLUME_MASTER"

[node name="Master" type="HSlider" parent="Panel/MarginContainer/Vertical/Middle/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001

[node name="Music" type="HBoxContainer" parent="Panel/MarginContainer/Vertical/Middle"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/Vertical/Middle/Music"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "MUSIC"

[node name="Music" type="HSlider" parent="Panel/MarginContainer/Vertical/Middle/Music"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001

[node name="SoundEffects" type="HBoxContainer" parent="Panel/MarginContainer/Vertical/Middle"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/Vertical/Middle/SoundEffects"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "VOLUME_SFX"

[node name="SFX" type="HSlider" parent="Panel/MarginContainer/Vertical/Middle/SoundEffects"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001

[node name="Bottom" type="HBoxContainer" parent="Panel/MarginContainer/Vertical"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 50

[node name="Back" type="Button" parent="Panel/MarginContainer/Vertical/Bottom"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 33
text = "BACK"

[node name="Save" type="Button" parent="Panel/MarginContainer/Vertical/Bottom"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 33
text = "SAVE"

[connection signal="item_selected" from="Panel/MarginContainer/Vertical/Middle/Language/LanguageOptions" to="." method="_on_language_options_item_selected"]
[connection signal="value_changed" from="Panel/MarginContainer/Vertical/Middle/MasterVolume/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/Vertical/Middle/Music/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/Vertical/Middle/SoundEffects/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="button_up" from="Panel/MarginContainer/Vertical/Bottom/Back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="Panel/MarginContainer/Vertical/Bottom/Save" to="." method="_on_save_button_up"]
